--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -1,11 +1,5 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@{ 
     Layout = "_LayoutAdmin";
 }
 
-<h2>Ini Area Admin</h2>
-
-@*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
+<h2>Ini Halaman Admin</h2>
