--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -22,6 +22,8 @@
     <!-- Custom styles for this template-->
     <link href="~/template/css/sb-admin-2.min.css" rel="stylesheet">
 
+    <link href="~/template/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+
 </head>
 
 <body id="page-top">
@@ -70,7 +72,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
                         <a class="collapse-item" href="#">Tabel User</a>
-                        <a class="collapse-item" href="#">Tabel Barang</a>
+                        <a class="collapse-item" asp-area="Admin" asp-controller="Stuff" asp-action="Index">Tabel Barang</a>
                     </div>
                 </div>
             </li>
@@ -320,13 +322,13 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    @*<div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
                             <i class="fas fa-download fa-sm text-white-50">
                             </i> Generate Report
                         </a>
-                    </div>
+                    </div>*@
 
                     <!-- Content Row -->
                     <div class="row">
@@ -394,6 +396,13 @@
     <!-- Page level custom scripts -->
     <script src="~/template/js/demo/chart-area-demo.js"></script>
     <script src="~/template/js/demo/chart-pie-demo.js"></script>
+
+    <!-- Page level plugins -->
+    <script src="~/template/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/template/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+    <!-- Page level custom scripts -->
+    <script src="~/template/js/demo/datatables-demo.js"></script>
 
 
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
