--- a/Views/Akun/SignUp.cshtml
+++ b/Views/Akun/SignUp.cshtml
@@ -4,46 +4,44 @@
     Layout = "_LayoutAccount";
 }
 
-<form asp-action="SignUp" method="post" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
-    <span class="login100-form-title">
-        Sign Up
-    </span>
-    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-        <input class="input100" type="text" asp-for="Name" placeholder="Full Name">
-        <span class="focus-input100"></span>
-    </div>
 
-    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter email">
-        <input class="input100" type="email" asp-for="Email" placeholder="Email Address">
-        <span class="focus-input100"></span>
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
+<title>Furnitica - Sign Up</title>
 
-    <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-        <input class="input100" type="text" asp-for="Username" placeholder="Username">
-        <span class="focus-input100"></span>
+<div id="content" class="page-content">
+    <div class="register-form text-center">
+        <h1 class="text-center title-page">Create Account</h1>
+        <form asp-action="SignUp" id="customer-form" class="js-customer-form" method="POST">
+            <div>
+                <div class="form-group">
+                    <div>
+                        <input class="form-control" asp-for="Name" type="text" placeholder="Full Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <input class="form-control" asp-for="Email" type="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <input class="form-control" asp-for="Username" type="text" placeholder="Username">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <div class="input-group js-parent-focus">
+                            <input class="form-control js-child-focus js-visible-password" asp-for="Password" type="password" placeholder="Password">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix">
+                <div>
+                    <button class="btn btn-primary" type="submit">
+                        Create Account
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
-
-    <div class="wrap-input100 validate-input" data-validate="Please enter password">
-        <input class="input100" type="password" asp-for="Password" placeholder="Password">
-        <span class="focus-input100"></span>
-    </div>
-
-    <div class="text-right p-t-13 p-b-23">
-    </div>
-
-    <div class="container-login100-form-btn">
-        <button type="submit" class="login100-form-btn">
-            Sign Up
-        </button>
-    </div>
-
-    <div class="flex-col-c p-t-170 p-b-40">
-        <span class="txt1 p-b-9">
-            You have an account?
-        </span>
-        <a asp-action="SignIn" class="txt3">
-            Sign In
-        </a>
-    </div>
-</form>
+</div>
